--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 # The database url
 DATABASE_URL="mysql://<user>:<password>@localhost:3306/<database>?schema=public"
+
 # This phrase is used for payments and p2p en/decryption
 PAYING_ACCOUNT_PASSPHRASE=<your secret phrase>
+
 # Set your preferred Signum Node her
 SIGNUM_NODE_HOST=http://localhost:8125
+
+# Whitelisted IP's skips the ip duplication check can use IP ranges like 123.123.1
+WHITELISTED_IPS=123.123,123.123.123.122,192.168.1.1
